--- a/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
+++ b/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
@@ -32,10 +32,11 @@
         android:layout_height="wrap_content"
         style="@style/bottom_sheet_title_style"
         android:layout_marginTop="@dimen/padding4"
+        android:layout_marginHorizontal="@dimen/padding8"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
         android:maxLines="1"
-        android:textSize="@dimen/primary_text_size_16"
+        android:textSize="@dimen/primary_text_size_19"
         card_view:layout_constraintStart_toEndOf="@id/cv"
         card_view:layout_constraintTop_toTopOf="@id/cv"
         tools:text="Название альбома" />
@@ -44,12 +45,13 @@
         android:id="@+id/tv_tracks_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/bottom_sheet_title_style"
+        style="@style/bottom_sheet_title_style2"
         android:layout_marginVertical="@dimen/padding4"
+        android:layout_marginHorizontal="@dimen/padding8"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
         android:maxLines="1"
-        android:textSize="@dimen/primary_text_size_16"
+        android:textSize="@dimen/primary_text_size_13"
         card_view:layout_constraintStart_toEndOf="@id/cv"
         card_view:layout_constraintTop_toBottomOf="@id/tv_playlist_name"
         tools:text="Количество треков" />
