--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -130,6 +130,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="bottom_sheet_title_style2">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="bottom_sheet_style">
         <item name="android:backgroundTint">@color/yp_black</item>
     </style>
