--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="settings_element_height">60dp</dimen>
     <dimen name="margin_top_80">80dp</dimen>
     <dimen name="margin_top_108">108dp</dimen>
+    <dimen name="padding170">170dp</dimen>
     <dimen name="primary_text_size_13">13sp</dimen>
     <dimen name="primary_text_size_14">14sp</dimen>
     <dimen name="primary_text_size_15">15sp</dimen>
