--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/iv_button_back"
@@ -28,12 +28,15 @@
 
         <ImageView
             android:id="@+id/iv_playlist_image"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="h, 1:1"
+            app:layout_constraintDimensionRatio="w, 1:1"
+            android:layout_marginBottom="@dimen/padding20"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_playlist_name"
             tools:src="@drawable/default_album_image" />
 
         <TextView
@@ -41,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding16"
-            android:layout_marginTop="@dimen/padding24"
+            android:layout_marginBottom="@dimen/padding8"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_medium"
             android:maxLines="1"
@@ -49,7 +52,7 @@
             android:textSize="@dimen/primary_text_size_24"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_playlist_image"
+            app:layout_constraintBottom_toTopOf="@id/tv_playlist_description"
             tools:text="Best Songs 2021" />
 
         <TextView
@@ -57,14 +60,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding16"
-            android:layout_marginTop="@dimen/padding8"
+            android:layout_marginBottom="@dimen/padding8"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_medium"
             android:maxLines="1"
             android:textColor="@color/yp_black"
             android:textSize="@dimen/primary_text_size_19"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_playlist_name"
+            app:layout_constraintBottom_toTopOf="@id/tv_playlist_duration"
             tools:text="2022" />
 
         <TextView
@@ -72,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/padding16"
-            android:layout_marginTop="@dimen/padding8"
+            android:layout_marginBottom="@dimen/padding8"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_medium"
             android:maxLines="1"
@@ -80,21 +83,21 @@
             android:textSize="@dimen/primary_text_size_19"
             app:drawableEndCompat="@drawable/circle1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_playlist_description"
+            app:layout_constraintBottom_toTopOf="@id/iv_share"
             tools:text="300 минут" />
 
         <TextView
             android:id="@+id/tv_playlist_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding8"
+            android:layout_marginBottom="@dimen/padding8"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_medium"
             android:maxLines="1"
             android:textColor="@color/yp_black"
             android:textSize="@dimen/primary_text_size_19"
             app:layout_constraintStart_toEndOf="@id/tv_playlist_duration"
-            app:layout_constraintTop_toBottomOf="@id/tv_playlist_description"
+            app:layout_constraintBottom_toTopOf="@id/iv_share"
             tools:text="98 треков" />
 
         <ImageView
@@ -102,22 +105,30 @@
             android:layout_width="@dimen/padding24"
             android:layout_height="@dimen/padding24"
             android:layout_marginStart="@dimen/padding16"
-            android:layout_marginTop="@dimen/padding8"
+            android:layout_marginBottom="@dimen/padding8"
             android:clickable="true"
             android:src="@drawable/share_black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_playlist_duration" />
+            app:layout_constraintBottom_toTopOf="@id/free_spase" />
 
         <ImageView
             android:id="@+id/iv_menu"
             android:layout_width="@dimen/padding24"
             android:layout_height="@dimen/padding24"
             android:layout_marginStart="@dimen/padding16"
-            android:layout_marginTop="@dimen/padding8"
+            android:layout_marginBottom="@dimen/padding8"
             android:clickable="true"
             android:src="@drawable/three_dots"
             app:layout_constraintStart_toEndOf="@id/iv_share"
-            app:layout_constraintTop_toBottomOf="@id/tv_playlist_duration" />
+            app:layout_constraintBottom_toTopOf="@id/free_spase" />
+
+        <View
+            android:id="@+id/free_spase"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -137,7 +148,7 @@
         android:orientation="vertical"
         android:foreground="?android:attr/selectableItemBackground"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="@dimen/padding170"
+        app:behavior_peekHeight="280dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         tools:visibility="gone">
 
@@ -183,7 +194,7 @@
         app:behavior_hideable="true"
         app:behavior_peekHeight="auto"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <View
             android:layout_width="40dp"
