--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,30 @@
         <item name="stSolidBackground">true</item>
         <item name="stStrokeWidth">3dp</item>
         <item name="stStrokeColor">#fff</item>
-        <item name="stLength">LONG</item> LONG or SHORT
+        <item name="stLength">LONG</item>
+        LONG or SHORT
         <item name="stRadius">5dp</item>
+    </style>
+
+    <!-- Стиль для всплывающих окон -->
+    <style name="dialog_theme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textSize">@dimen/primary_text_size_19</item>
+        <item name="android:height">@dimen/height64</item>
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
+    </style>
+
+    <style name="PositiveButtonStyle">
+        <item name="android:textColor">@color/yp_blue</item>
+        <item name="backgroundTint">@color/white</item>
+    </style>
+
+    <style name="NegativeButtonStyle">
+        <item name="android:textColor">@color/yp_blue</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
     <!-- Стили для Стартового экрана -->
@@ -41,7 +63,7 @@
     <style name="StartActivityBackground">
         <item name="android:background">@color/yp_blue</item>
     </style>
-    
+
     <style name="bottom_panel">
         <item name="itemTextColor">@color/bottom_nav_color_light</item>
         <item name="itemIconTint">@color/bottom_nav_color_light</item>
@@ -94,7 +116,7 @@
     <style name="title_you_were_looking_for">
         <item name="android:textColor">@color/black</item>
     </style>
-    
+
     <style name="MessageError">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">@color/yp_black</item>
@@ -141,8 +163,7 @@
 
 
     <!-- Стили для экрана создания нового альбома -->
-    <style name="play_list_create_text_input_layout"
-        parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="play_list_create_text_input_layout" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="fontWeight">400</item>
@@ -159,8 +180,7 @@
 
     <!-- Стиль для BottomSheet на экране аудиоплеера  -->
 
-    <style name="bottom_sheet_audio_player"
-        parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="bottom_sheet_audio_player" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="boxCornerRadiusTopEnd">8dp</item>
