--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -125,7 +125,7 @@
         <View
             android:id="@+id/free_spase"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="@dimen/height300"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -148,7 +148,7 @@
         android:orientation="vertical"
         android:foreground="?android:attr/selectableItemBackground"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="280dp"
+        app:behavior_peekHeight="@dimen/height280"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         tools:visibility="gone">
 
