--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,8 @@
     <dimen name="margin_top_80">80dp</dimen>
     <dimen name="margin_top_108">108dp</dimen>
     <dimen name="padding170">170dp</dimen>
+    <dimen name="height280">280dp</dimen>
+    <dimen name="height300">300dp</dimen>
     <dimen name="primary_text_size_13">13sp</dimen>
     <dimen name="primary_text_size_14">14sp</dimen>
     <dimen name="primary_text_size_15">15sp</dimen>
